--- a/moveit/src/styles/global.css
+++ b/moveit/src/styles/global.css
@@ -30,11 +30,11 @@
   }
 }
 
-/* @media(max-width: 640px) {
+@media(max-width: 640px) {
   html {
     font-size: 81.25%;
   }
-} */
+}
 
 body {
   background: var(--background);
@@ -86,7 +86,6 @@ a {
   height: 4px;
   border-radius: 4px;
   background: var(--green);
-
 }
 
 span.current-experience {
